Update EmployeesApp to target .NET 9.0
Updated project files for Application, Domain, Infrastructure, and Web to target .NET 9.0, including properties for implicit usings and nullable reference types. Added project references to maintain dependencies and modified the solution file to ensure all projects are correctly linked.

--- a/EmployeesApp.Web/EmployeesApp.Web.csproj
+++ b/EmployeesApp.Web/EmployeesApp.Web.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EmployeesApp.Infrastructure\EmployeesApp.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
